--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -605,9 +605,6 @@ video {
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
-.col-span-8 {
-  grid-column: span 8 / span 8;
-}
 .m-2 {
   margin: 0.5rem;
 }
@@ -846,9 +843,6 @@ video {
 .w-6 {
   width: 1.5rem;
 }
-.w-60 {
-  width: 15rem;
-}
 .w-72 {
   width: 18rem;
 }
@@ -975,12 +969,6 @@ video {
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
@@ -1297,9 +1285,6 @@ video {
 }
 .pt-2 {
   padding-top: 0.5rem;
-}
-.pt-28 {
-  padding-top: 7rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1877,6 +1862,10 @@ body {
 }
 @media (min-width: 768px) {
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:rounded-none {
     border-radius: 0px;
   }
@@ -1885,6 +1874,10 @@ body {
 
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .lg\:w-2\/5 {
