--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -803,9 +803,6 @@ video {
 .w-2\/3 {
   width: 66.666667%;
 }
-.w-2\/4 {
-  width: 50%;
-}
 .w-24 {
   width: 6rem;
 }
@@ -1284,9 +1281,6 @@ video {
 }
 .pr-3\.5 {
   padding-right: 0.875rem;
-}
-.ps-6 {
-  padding-inline-start: 1.5rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1911,19 +1905,24 @@ body {
     width: 3rem;
   }
 
-  .md\:gap-4 {
-    gap: 1rem;
+  .md\:w-2\/4 {
+    width: 50%;
   }
 
-
-  .sm\:gap-4 {
-    gap: 1rem;
+  .md\:w-3\/5 {
+    width: 60%;
   }
-}
-@media (min-width: 768px) {
+
+  .md\:w-full {
+    width: 100%;
+  }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:rounded-none {
@@ -1951,6 +1950,10 @@ body {
 
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 
   .lg\:w-2\/5 {
@@ -2015,48 +2018,21 @@ body {
     gap: 0px;
   }
 
+  .xl\:ps-6 {
+    padding-inline-start: 1.5rem;
+  }
+
   .xl\:text-left {
     text-align: left;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .xl\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-}
-@media (min-width: 1024px) {
-
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-2\/5 {
-    width: 40%;
-  }
-}
-@media (min-width: 1280px) {
-
-  .xl\:h-5\/6 {
-    height: 83.333333%;
-  }
-
-  .xl\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .xl\:flex-row {
-    flex-direction: row;
-  }
-
-  .xl\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .xl\:gap-0 {
-    gap: 0px;
   }
 }
