--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -688,6 +688,9 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
+.mt-8 {
+  margin-top: 2rem;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -729,6 +732,9 @@ video {
 }
 .h-20 {
   height: 5rem;
+}
+.h-24 {
+  height: 6rem;
 }
 .h-3 {
   height: 0.75rem;
@@ -802,9 +808,6 @@ video {
 }
 .w-2\/3 {
   width: 66.666667%;
-}
-.w-2\/4 {
-  width: 50%;
 }
 .w-24 {
   width: 6rem;
@@ -1285,9 +1288,6 @@ video {
 .pr-3\.5 {
   padding-right: 0.875rem;
 }
-.ps-6 {
-  padding-inline-start: 1.5rem;
-}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1388,6 +1388,10 @@ video {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.text-\[\#0369a1\] {
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -1911,19 +1915,24 @@ body {
     width: 3rem;
   }
 
-  .md\:gap-4 {
-    gap: 1rem;
+  .md\:w-2\/4 {
+    width: 50%;
   }
 
-
-  .sm\:gap-4 {
-    gap: 1rem;
+  .md\:w-3\/5 {
+    width: 60%;
   }
-}
-@media (min-width: 768px) {
+
+  .md\:w-full {
+    width: 100%;
+  }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:rounded-none {
@@ -1941,16 +1950,16 @@ body {
     height: 60%;
   }
 
-  .lg\:h-4\/5 {
-    height: 80%;
-  }
-
   .lg\:h-\[296px\] {
     height: 296px;
   }
 
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 
   .lg\:w-2\/5 {
@@ -2015,48 +2024,21 @@ body {
     gap: 0px;
   }
 
+  .xl\:ps-6 {
+    padding-inline-start: 1.5rem;
+  }
+
   .xl\:text-left {
     text-align: left;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .xl\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-}
-@media (min-width: 1024px) {
-
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-2\/5 {
-    width: 40%;
-  }
-}
-@media (min-width: 1280px) {
-
-  .xl\:h-5\/6 {
-    height: 83.333333%;
-  }
-
-  .xl\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .xl\:flex-row {
-    flex-direction: row;
-  }
-
-  .xl\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .xl\:gap-0 {
-    gap: 0px;
   }
 }
