--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -688,6 +688,9 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
+.mt-8 {
+  margin-top: 2rem;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -729,6 +732,9 @@ video {
 }
 .h-20 {
   height: 5rem;
+}
+.h-24 {
+  height: 6rem;
 }
 .h-3 {
   height: 0.75rem;
@@ -1385,6 +1391,10 @@ video {
 .tracking-widest {
   letter-spacing: 0.1em;
 }
+.text-\[\#0369a1\] {
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
+}
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(51 51 51 / var(--tw-text-opacity));
@@ -1940,10 +1950,6 @@ body {
 
   .lg\:h-3\/5 {
     height: 60%;
-  }
-
-  .lg\:h-4\/5 {
-    height: 80%;
   }
 
   .lg\:h-\[296px\] {
