--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -754,6 +754,9 @@ video {
 .h-60 {
   height: 15rem;
 }
+.h-64 {
+  height: 16rem;
+}
 .h-72 {
   height: 18rem;
 }
@@ -835,6 +838,9 @@ video {
 .w-6 {
   width: 1.5rem;
 }
+.w-64 {
+  width: 16rem;
+}
 .w-72 {
   width: 18rem;
 }
@@ -843,9 +849,6 @@ video {
 }
 .w-80 {
   width: 20rem;
-}
-.w-\[200px\] {
-  width: 200px;
 }
 .w-auto {
   width: auto;
