--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,7 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');/*
-! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -134,9 +136,7 @@ select {
 }/*
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Remove default button styles.
-*/
-
-button,
+*/button,
 input:where([type='button']),
 input:where([type='reset']),
 input:where([type='submit']) {
@@ -305,9 +305,7 @@ video {
   --tw-contain-layout:  ;
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
-}
-
-::backdrop {
+}::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -359,8 +357,7 @@ video {
   --tw-contain-layout:  ;
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
-}
-.container {
+}.container{
   width: 100%;
 }@media (min-width: 640px){.container{
     max-width: 640px;
@@ -377,6 +374,8 @@ video {
 }@media (min-width: 1536px){.container{
     max-width: 1536px;
   }
+}.visible{
+  visibility: visible;
 }.absolute{
   position: absolute;
 }.relative{
@@ -625,11 +624,9 @@ video {
   flex: 1 1 0%;
 }.flex-grow{
   flex-grow: 1;
-}
-.grow {
+}.grow{
   flex-grow: 1;
-}
-.origin-top {
+}.origin-top{
   transform-origin: top;
 }.-translate-x-1\/2{
   --tw-translate-x: -50%;
@@ -1472,9 +1469,6 @@ body,
   }.md\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }.md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 }@media (min-width: 1024px){.lg\:flex{
     display: flex;
